sandbox/output
NumberParser.java:11: error: unreachable statement
            spliter.setDelimiter(",|\n");
            ^
1 error
